# ow-agent-orchestration

./: AGENTS.md  README.md  behave.ini  cucumber.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cucumber-tests/steps/: agents_steps.ts
features/: environment.py
features/agents/: test_agent.feature
features/behave-tests/: installation_steps.py  storage_steps.py
features/cucumber-tests/: package.json
features/cucumber-tests/steps/: agents_steps.ts
features/cucumber-tests/support/: hooks.ts
features/entrypoint/: entrypoint.feature
features/installation/: installation.feature
features/steps/: agents_steps.py  build_steps.py  entrypoint_steps.py
features/storage/: storage_isolation.feature
opencode/: package.json
scripts/: install.sh
src/ow_agent_orchestration/agents/: test.md
src/ow_agent_orchestration/entrypoint/: __init__.py
typescript-bdd-tests/support/: hooks.ts
