[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ow-agent-orchestration"
version = "0.1.0"
description = "A BDD-focused fork of opencode"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.hatch.envs.default]
dependencies = [
  "behave",
]

[tool.hatch.envs.default.scripts]
behave = "behave {args}"
