[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ow-agent-orchestration"
dynamic = ["version"]
description = "A BDD-focused fork of opencode"
license = { text = "MIT" }
requires-python = ">=3.12"

[project.scripts]
ow = "ow_agent_orchestration.entrypoint:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "behave",
]

[tool.hatch.envs.default.scripts]
behave = "behave --steps-dir behave-tests/steps features/ {args}"
